fix response register controller
